bk_ida/gccida/c0/hard_reg_set_here_p
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/hard_reg_set_here_p/src/reload.c:2536:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)op0)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/hard_reg_set_here_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/hard_reg_set_here_p/src/reload.c:2537:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v12 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)op0)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/hard_reg_set_here_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/hard_reg_set_here_p/src/obj/reload.o] Error 1
